Created the navbar andmoved more images into the assets folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <main>
-        
+        <nav>
+            <img src="/assets/header-removebg-preview.png" alt="can't load image">
+            <div class="burger-container" onclick="openNav()">
+                <div class="burger"></div>
+            </div> 
+            <div class="links-container">
+                <div class="nav-links">
+                    <ul>
+                        <li>Home</li>
+                        <li>About Us</li>
+                        <li>Our Services</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </main>
+
+    <script src="/script.js"></script>
 </body>
 </html>
