fixed Navbar Bug

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <div class="links-container">
                 <div class="nav-links">
                     <ul>
-                        <li>Home</li>
-                        <li>About Us</li>
-                        <li>Our Services</li>
-                        <li>Contact Us</li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#services">Our Services</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <section id="home"></section>
     </main>
-
     <script src="/script.js"></script>
 </body>
 </html>
