Created integral part of the hero page

--- a/index.html
+++ b/index.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Roommates</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <nav>
-            <img src="/assets/header-removebg-preview.png" alt="can't load image">
-            <div class="burger-container" onclick="openNav()">
-                <div class="burger"></div>
-            </div> 
-            <div class="links-container">
-                <div class="nav-links">
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#services">Our Services</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
-                    </ul>
-                </div>
+      <nav>
+        <img src="/assets/header-removebg-preview.png" alt="can't load image" />
+        <div class="burger-container" onclick="openNav()">
+          <div class="burger"></div>
+        </div>
+        <div class="links-container">
+          <div class="nav-links">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About Us</a></li>
+              <li><a href="#services">Our Services</a></li>
+              <li><a href="#contact">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section id="home">
+        <h1>Find the Perfect Roommate For You</h1>
+        <p>
+          Join SettledSqure, make friends, get matched. Find the best apartment
+          to suit your needs.
+        </p>
+        <div class="btn-div">
+          <button>
+            <a href="#"
+              ><img src="/assets/playstore.svg" alt="can't load image"
+            />
+            <div class="btn-text">
+                <span class="get">Get it on</span>
+                <span class="platform">GOOGLE PLAY</span>
             </div>
-        </nav>
-        <section id="home"></section>
+        </a>
+          </button>
+          <button>
+            <a href="#"
+              ><img src="/assets/appstore.svg" alt="can't load image"
+            />
+            <div class="btn-text">
+                <span class="get">Get it on</span>
+                <span class="platform">APPLE APPSTORE</span>
+            </div>
+        </a>
+          </button>
+        </div>
+      </section>
     </main>
     <script src="/script.js"></script>
-</body>
+  </body>
 </html>
