Added images to the hero page

--- a/index.html
+++ b/index.html
@@ -34,24 +34,34 @@
         <div class="btn-div">
           <button>
             <a href="#"
-              ><img src="/assets/playstore.svg" alt="can't load image"
-            />
-            <div class="btn-text">
+              ><img src="/assets/playstore.svg" alt="can't load image" />
+              <div class="btn-text">
                 <span class="get">Get it on</span>
                 <span class="platform">GOOGLE PLAY</span>
-            </div>
-        </a>
+              </div>
+            </a>
           </button>
           <button>
             <a href="#"
-              ><img src="/assets/appstore.svg" alt="can't load image"
-            />
-            <div class="btn-text">
+              ><img src="/assets/appstore.svg" alt="can't load image" />
+              <div class="btn-text">
                 <span class="get">Get it on</span>
                 <span class="platform">APPLE APPSTORE</span>
-            </div>
-        </a>
+              </div>
+            </a>
           </button>
+        </div>
+        <div class="hero-images">
+          <div class="top-images">
+            <img src="/assets/person i.svg" alt="can't load image" />
+            <img src="/assets/person ii.svg" class="middle-one" alt="can't load image" />
+            <img src="/assets/person iii.svg" alt="can't load image" />
+          </div>
+          <div class="bottom-images">
+            <img src="/assets/person iv.svg" alt="can't load image" />
+            <img src="/assets/person v.svg" class="middle-two" alt="can't load image" />
+            <img src="/assets/person vi.svg" alt="can't load image" />
+          </div>
         </div>
       </section>
     </main>
