--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           </div>
         </div>
       </section>
+      <section id="about">
+        <h2>About us</h2>
+        <p>The easiest way to be paired with your perfect match</p>
+      </section>
     </main>
     <script src="/script.js"></script>
   </body>
