created about section

--- a/index.html
+++ b/index.html
@@ -54,19 +54,34 @@
         <div class="hero-images">
           <div class="top-images">
             <img src="/assets/person i.svg" alt="can't load image" />
-            <img src="/assets/person ii.svg" class="middle-one" alt="can't load image" />
+            <img
+              src="/assets/person ii.svg"
+              class="middle-one"
+              alt="can't load image"
+            />
             <img src="/assets/person iii.svg" alt="can't load image" />
           </div>
           <div class="bottom-images">
             <img src="/assets/person iv.svg" alt="can't load image" />
-            <img src="/assets/person v.svg" class="middle-two" alt="can't load image" />
+            <img
+              src="/assets/person v.svg"
+              class="middle-two"
+              alt="can't load image"
+            />
             <img src="/assets/person vi.svg" alt="can't load image" />
           </div>
         </div>
       </section>
       <section id="about">
         <h2>About us</h2>
-        <p>The easiest way to be paired with your perfect match</p>
+        <h4>The easiest way to be paired with your perfect match</h4>
+        <img src="/assets/about img.svg" alt="can't load image" />
+        <p>
+          SettledSqure is the perfect place for you to find your perfect
+          roommate match. We provide you with profiles of people with the same
+          goal, and you get the chance to pick out the best fit for you.
+        </p>
+        <span class="more">Learn more</span>
       </section>
     </main>
     <script src="/script.js"></script>
