--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="links-container">
           <div class="nav-links">
             <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#services">Our Services</a></li>
-              <li><a href="#contact">Contact Us</a></li>
+              <li><a href="#home" onclick="unHide()">Home</a></li>
+              <li><a href="#about" onclick="unHide()">About Us</a></li>
+              <li><a href="#services" onclick="unHide()">Our Services</a></li>
+              <li><a href="#contact" onclick="unHide()">Contact Us</a></li>
             </ul>
           </div>
         </div>
