completed services section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
         </p>
         <span class="more">Learn more</span>
       </section>
+      <section id="services">
+        <h2>Services</h2>
+        <h3>What We Provide</h3>
+        <div class="services-container">
+          <div class="service">
+            <img src="/assets/pairing.svg" alt="can't load image" />
+            <h4>Perfect Pairing</h4>
+            <p>We provide you with the opportunity of meeting people, forming connections, and making informed decisions on who to live with.</p>
+          </div>
+          <div class="service">
+            <img src="/assets/apartment img.svg" alt="can't load image" />
+            <h4>Suitable Apartments For You</h4>
+            <p>Have conversations with landlords, view pictures of nice apartments close to you, and make very safe payments.</p>
+          </div>
+          <div class="service">
+            <img src="/assets/safety img.svg" alt="can't load image" />
+            <h4>Safe and Secure</h4>
+            <p>Your safety is our priority. We keep all your private information confidential. Focus on making the right decision, while we work 24/7 to protect your data and privacy</p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="/script.js"></script>
   </body>
