added image to services section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
             <p>Your safety is our priority. We keep all your private information confidential. Focus on making the right decision, while we work 24/7 to protect your data and privacy</p>
           </div>
         </div>
+        <div class="find__apart">
+            <h2>Find apartments close to you</h2>
+            <p>SettledSqure provides the oportunity for you to search fro apartments based on your budget and location. You also get to make informed decisions as we provides live measurements and pictures of every apartment displayed.</p>
+            <div class="image-part">
+                <div class="left__image-part">
+                    <img src="/assets/apartment i.svg" alt="can't load image">
+                    <img src="/assets/apartment iii.svg" alt="can't load image">
+                </div>
+                <div class="right__image-part">
+                    <img src="/assets/apartment ii.svg" alt="can't load image">
+                    <img src="/assets/apartment iv.svg" alt="can't load image">
+                </div>
+            </div>
+        </div>
       </section>
     </main>
     <script src="/script.js"></script>
