created and styled contact section

--- a/index.html
+++ b/index.html
@@ -90,32 +90,58 @@
           <div class="service">
             <img src="/assets/pairing.svg" alt="can't load image" />
             <h4>Perfect Pairing</h4>
-            <p>We provide you with the opportunity of meeting people, forming connections, and making informed decisions on who to live with.</p>
+            <p>
+              We provide you with the opportunity of meeting people, forming
+              connections, and making informed decisions on who to live with.
+            </p>
           </div>
           <div class="service">
             <img src="/assets/apartment img.svg" alt="can't load image" />
             <h4>Suitable Apartments For You</h4>
-            <p>Have conversations with landlords, view pictures of nice apartments close to you, and make very safe payments.</p>
+            <p>
+              Have conversations with landlords, view pictures of nice
+              apartments close to you, and make very safe payments.
+            </p>
           </div>
           <div class="service">
             <img src="/assets/safety img.svg" alt="can't load image" />
             <h4>Safe and Secure</h4>
-            <p>Your safety is our priority. We keep all your private information confidential. Focus on making the right decision, while we work 24/7 to protect your data and privacy</p>
+            <p>
+              Your safety is our priority. We keep all your private information
+              confidential. Focus on making the right decision, while we work
+              24/7 to protect your data and privacy
+            </p>
           </div>
         </div>
         <div class="find__apart">
-            <h2>Find apartments close to you</h2>
-            <p>SettledSqure provides the oportunity for you to search fro apartments based on your budget and location. You also get to make informed decisions as we provides live measurements and pictures of every apartment displayed.</p>
-            <div class="image-part">
-                <div class="left__image-part">
-                    <img src="/assets/apartment i.svg" alt="can't load image">
-                    <img src="/assets/apartment iii.svg" alt="can't load image">
-                </div>
-                <div class="right__image-part">
-                    <img src="/assets/apartment ii.svg" alt="can't load image">
-                    <img src="/assets/apartment iv.svg" alt="can't load image">
-                </div>
+          <h2>Find apartments close to you</h2>
+          <p>
+            SettledSqure provides the oportunity for you to search fro
+            apartments based on your budget and location. You also get to make
+            informed decisions as we provides live measurements and pictures of
+            every apartment displayed.
+          </p>
+          <div class="image-part">
+            <div class="left__image-part">
+              <img src="/assets/apartment i.svg" alt="can't load image" />
+              <img src="/assets/apartment iii.svg" alt="can't load image" />
             </div>
+            <div class="right__image-part">
+              <img src="/assets/apartment ii.svg" alt="can't load image" />
+              <img src="/assets/apartment iv.svg" alt="can't load image" />
+            </div>
+          </div>
+          <button>Get Started</button>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="grey-container">
+          <h2>Subscribe to our Newsletter</h2>
+          <p>Subscribe to our newsletter to get the latest updates</p>
+          <div class="btn-div">
+            <button class="btn one">Enter your email</button
+            ><button class="btn two">Subscribe</button>
+          </div>
         </div>
       </section>
     </main>
