--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Roommates</title>
   </head>
   <body>
-    <main>
-      <nav>
+    <header>
+        <nav>
         <img src="/assets/header-removebg-preview.png" alt="can't load image" />
         <div class="burger-container" onclick="openNav()">
           <div class="burger"></div>
@@ -25,6 +25,8 @@
           </div>
         </div>
       </nav>
+    </header>
+    <main>
       <section id="home">
         <h1>Find the Perfect Roommate For You</h1>
         <p>
@@ -143,8 +145,32 @@
             ><button class="btn two">Subscribe</button>
           </div>
         </div>
+        <div class="contact__socials">
+            <h2>Follow us on social media:</h2>
+            <div class="socials">
+                <img src="/assets/facebook.svg" alt="can't load image">
+                <img src="/assets/instagram.svg" alt="can't load image">
+                <img src="/assets/twitter.svg" alt="can't load image">
+                <img src="/assets/linkedin.svg" alt="can't load image">
+            </div>
+        </div>
       </section>
     </main>
+    <footer>
+        <div class="footer__ourservices">
+            <h3>Our Services</h3>
+            <p>Fill in your profile</p>
+            <p>View profiles</p>
+            <p>Get paired</p>
+            <p>Advertise apartments</p>
+            <p>Sell apartments</p>
+        </div>
+        <div class="footer__contactus">
+            <h3>Contact Us</h3>
+            <p>(+234) 58 2453 9748</p>
+            <p>SettledSqure@gmail.com</p>
+        </div>
+    </footer>
     <script src="/script.js"></script>
   </body>
 </html>
