added error page and smooth scroll feature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="links-container">
           <div class="nav-links">
             <ul>
-              <li><a href="#home" onclick="unHide()">Home</a></li>
+              <li><a href="#" onclick="unHide()">Home</a></li>
               <li><a href="#about" onclick="unHide()">About Us</a></li>
               <li><a href="#services" onclick="unHide()">Our Services</a></li>
               <li><a href="#contact" onclick="unHide()">Contact Us</a></li>
@@ -35,7 +35,7 @@
         </p>
         <div class="btn-div">
           <button>
-            <a href="#"
+            <a href="/error 404/index.html"
               ><img src="/assets/playstore.svg" alt="can't load image" />
               <div class="btn-text">
                 <span class="get">Get it on</span>
@@ -44,7 +44,7 @@
             </a>
           </button>
           <button>
-            <a href="#"
+            <a href="/error 404/index.html"
               ><img src="/assets/appstore.svg" alt="can't load image" />
               <div class="btn-text">
                 <span class="get">Get it on</span>
@@ -83,7 +83,7 @@
           roommate match. We provide you with profiles of people with the same
           goal, and you get the chance to pick out the best fit for you.
         </p>
-        <span class="more">Learn more</span>
+        <a href="/error 404/index.html" class="more">Learn more</a>
       </section>
       <section id="services">
         <h2>Services</h2>
@@ -133,7 +133,7 @@
               <img src="/assets/apartment iv.svg" alt="can't load image" />
             </div>
           </div>
-          <button>Get Started</button>
+          <a href="/error 404/index.html">Get Started</a>
         </div>
       </section>
       <section id="contact">
@@ -141,17 +141,17 @@
           <h2>Subscribe to our Newsletter</h2>
           <p>Subscribe to our newsletter to get the latest updates</p>
           <div class="btn-div">
-            <button class="btn one">Enter your email</button
-            ><button class="btn two">Subscribe</button>
+            <a href="/error 404/index.html" class="btn one">Enter your email</a>
+            <a href="/error 404/index.html" class="btn two">Subscribe</a>
           </div>
         </div>
         <div class="contact__socials">
             <h2>Follow us on social media:</h2>
             <div class="socials">
-                <img src="/assets/facebook.svg" alt="can't load image">
-                <img src="/assets/instagram.svg" alt="can't load image">
-                <img src="/assets/twitter.svg" alt="can't load image">
-                <img src="/assets/linkedin.svg" alt="can't load image">
+                <a href="/error 404/index.html"><img src="/assets/facebook.svg" alt="can't load image"></a>
+                <a href="/error 404/index.html"><img src="/assets/instagram.svg" alt="can't load image"></a>
+                <a href="/error 404/index.html"><img src="/assets/twitter.svg" alt="can't load image"></a>
+                <a href="/error 404/index.html"><img src="/assets/linkedin.svg" alt="can't load image"></a>
             </div>
         </div>
       </section>
